# cryptopool-simulator

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE.md  Makefile  bn_dyn.h  bn_fixed.h  bn_ldbl.h  example-crv.json  example-eth.json  main-legacy.cpp  main-stableswap-dynrate-lpf.cpp  main-stableswap-dynrate.cpp  main-stableswap-legacy.cpp  main-stableswap.cpp  main.cpp  pyproject.toml  sample12_in.json  sample16_in.json  sample_fiat.json  sample_in.json  sample_in1.json  sample_in_2_currencies.json  sample_in_3_currencies.json  sample_in_usdc.json  sample_in_usdt.json  sample_out.json  simulation_int_many_2_1.py  single-run.json
3crv/: readme.txt  sample-3crv.json
3tether/: make_inputs_A_gamma.py  sample_3usdeurgold.json
download/: bnbusdt-2021-2024.json  bnbusdt-2022-2024.json  brlusd-1m.json  btcusdc-uni-1m.json  btcusdt-1m-processed.json  btcusdt-2019-2024.json  btcusdt-2019-2025.json  btcusdt-2020-2024.json  btcusdt-2023-2025.json  cnyusd-1m.json  cryptogold-eth_btc_1min.json  cryptogold-xau_btc_1min.json  cryptogold-xau_eth_1min.json  curve-btcusdc-1m.json  curve-short-btcusdt-1m.json  ethbtc-1m-processed.json  ethusdc-uni-1m.json  ethusdt-1m-processed.json  ethusdt-2021-2024.json  eurusd-1m.json  fetch-btcusd.py  fetch-wsteth-fake.py  tricrv-crveth-1m.json  tricrv-crvusd-1m.json  tricrv-ethusd-1m.json  wstetheth.json  xauusd-1m.json
reference-check/: curve-tricryptousdc.json  curve-tricryptousdt.json  one.json  real-data.txt  tricryptousdc.json  uni-tricryptousdc.json  uni-tricryptousdt.json
scripts-download/: fetch-btcethusd.py  fetch-btcusd.py  (+3 more)
(+1361 files in other folders)
